recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: not found: value snowSi
	snowSi(levels-1, length/3)
        ^